# CG-Projeto

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  engine.cpp  generator  gerador.cpp  main.cpp  my_program  phase1.xml  plane.3d  planets.xml  tempCodeRunnerFile.cpp  xml_syntax.xml
generatorResults/: anelsaturno.3d  asteroide.3d  bezier_10.3d  box_2_3.3d  box_4_3.3d  cenas.3d  cenatola.3d  cone_1_2_30_5.3d  cone_1_2_4_3.3d  cone_2_1_30_5.3d  cone_2_2_30_5.3d  plane.3d  plane_2_3.3d  plane_4_4.3d  planet.3d  sphere_1_10_10.3d  sphere_1_20_20.3d  sphere_1_30_30.3d  sphere_1_8_8.3d  sphere_2_30_30.3d  teste.3d  torus.3d  torus_0,25_1_8_8.3d
src/: engine  engine.cpp  engine2.cpp  engineold.cpp  generator  generator.cpp  gerador  gerador.cpp  my_program  parserXML.cpp  parserXML.h  scriptSistemaSolar.py  scriptSistemaSolarDinamico.py  scriptSistemaSolarDinamicoTexturas.py
test files/: planets.xml  planets2.xml  planets3.xml
test files/test_files_phase_1/: test_1_4.xml  test_1_6.xml  test_1_7.xml  teste.xml
test files/test_files_phase_2/: test_2_5.xml
test files/test_files_phase_4/: test_4_6.xml  test_4_7.xml
